<resources>
    <string name="app_name">EmeEme</string>
    <string name="projects">Proyectos</string>
    <string name="study">Estudio</string>
    <string name="contact">Contacto</string>

    <!-- Create Project   -->
    <string name="project_name">Nombre del proyecto</string>
    <string name="project_description">Descripción del proyecto</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="project_featured">Proyecto destacado</string>
    <string name="next">Continuar</string>
    <string name="create_project">Crear Proyecto</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="invalid_lat_lng">Latitud y longitud no válidos</string>
    <string name="error">Error</string>
    <string name="error_uploading_image">Error al subir la imagen</string>
    <string name="project_creation_error">El proyecto no se ha podido crear</string>
    <string name="project_updated">El proyecto ha sido actualizado</string>

</resources>