<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adlagar.emeeme.ui.createproject.CreateProjectFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:inputType="none" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:inputType="none" />

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/project_featured"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_featured_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>